feat : viterbi with trigram tagger

--- a/hmm-pos-tagging.ipynb
+++ b/hmm-pos-tagging.ipynb
@@ -1329,6 +1329,299 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Define Modified Viterbi With Trigram Tagger\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trigram_tagger(state, word):\n",
+    "    current_state_len = len(state)\n",
+    "    word_tag = ''\n",
+    "    \n",
+    "    if current_state_len == 0:\n",
+    "        # use unigram transition probbaility at the start of a sentence         \n",
+    "        word_tag = tag_max_uni_prob[0]\n",
+    "    elif current_state_len == 1:\n",
+    "        # use bigram transition probability for 2nd word of a sentence\n",
+    "        word_tag = tag_big_pair[state[-1]]\n",
+    "    else:\n",
+    "        # use tigram transition probability for all other words\n",
+    "        selected_tag = generate_t3_given_t2_and_t1(state[-2], state[-1])\n",
+    "        \n",
+    "        # special case for end of sentence\n",
+    "        # fallback to bigram transition probability\n",
+    "        if selected_tag[2] == '.' and word != '.':\n",
+    "            word_tag = tag_big_pair[state[-1]]\n",
+    "        else:\n",
+    "            word_tag = selected_tag[2]\n",
+    "\n",
+    "    return word_tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Viterbi_With_Trigram_State(words, train_bag=train_tagged_words):\n",
+    "    state = []\n",
+    "\n",
+    "    for key, word in enumerate(words):\n",
+    "        p = []\n",
+    "        for tag in unique_tags:\n",
+    "            if key == 0:\n",
+    "                transition_p = df_tag.loc['.', tag]\n",
+    "            else:\n",
+    "                if key == 0:\n",
+    "                    transition_p = df_tag.loc['.', tag]\n",
+    "                else:\n",
+    "                    transition_p = df_tag.loc[state[-1], tag]\n",
+    "            \n",
+    "            emission_p = word_given_tag(words[key], tag) / tag_count_dict[tag]\n",
+    "            state_probability = emission_p * transition_p\n",
+    "            p.append(state_probability)\n",
+    "        \n",
+    "        pmax = max(p)\n",
+    "\n",
+    "        if pmax == 0:\n",
+    "            # invoke trigram tagger for unknown words where Viterbi fails to compute a tag\n",
+    "            try:\n",
+    "                last_end_of_sent = list(reversed(state)).index('.')\n",
+    "            except ValueError:\n",
+    "                # pass complete state in absence of a period\n",
+    "                last_end_of_sent = len(state)\n",
+    "                sent_state = state\n",
+    "                \n",
+    "            if last_end_of_sent == 0:\n",
+    "                sent_state = []\n",
+    "            else:\n",
+    "                sent_state = state[-last_end_of_sent:]\n",
+    "\n",
+    "            # pass state of current sentence instead of complete state                     \n",
+    "            state_max = trigram_tagger(sent_state, word)\n",
+    "        else:\n",
+    "            state_max = unique_tags[p.index(pmax)]\n",
+    "\n",
+    "        state.append(state_max)\n",
+    "\n",
+    "    return list(zip(words, state))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Running Algorithm On Validation Dataset\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 21.8 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "tagged_seq_trigram = Viterbi_With_Trigram_State(validation_untagged_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Model Validation\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9216867469879518\n"
+     ]
+    }
+   ],
+   "source": [
+    "check = [i for i, j in zip(tagged_seq_trigram, validation_run_base) if i == j]\n",
+    "\n",
+    "accuracy = len(check)/len(tagged_seq_trigram)\n",
+    "\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[(('sell', 'VERB'), ('sell', 'NOUN'))],\n",
+       " [(('printers', 'ADP'), ('printers', 'NOUN'))],\n",
+       " [(('start', 'NOUN'), ('start', 'VERB'))],\n",
+       " [(('there', 'DET'), ('there', 'ADV'))],\n",
+       " [(('assassinated', 'NOUN'), ('assassinated', 'VERB'))],\n",
+       " [(('Arabian', 'ADP'), ('Arabian', 'NOUN'))],\n",
+       " [(('pro-Iranian', 'NOUN'), ('pro-Iranian', 'ADJ'))],\n",
+       " [(('Islamic', 'ADP'), ('Islamic', 'NOUN'))],\n",
+       " [(('forthcoming', 'NOUN'), ('forthcoming', 'ADJ'))],\n",
+       " [(('10-year', 'ADJ'), ('10-year', 'NUM'))],\n",
+       " [(('yen-denominated', 'NOUN'), ('yen-denominated', 'ADJ'))],\n",
+       " [(('about', 'ADP'), ('about', 'ADV'))],\n",
+       " [(('redeeming', 'NOUN'), ('redeeming', 'VERB'))]]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "incorrect_tagged_cases_trigram = [[j] for i, j in enumerate(zip(tagged_seq_trigram, validation_run_base)) if j[0] != j[1]]\n",
+    "\n",
+    "print(len(incorrect_tagged_cases_trigram))\n",
+    "incorrect_tagged_cases_trigram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  *Accuracy of Viterbi With Trigram Tagger - **low-90s** depending on validation dataset*\n",
+    "-  *Number of incorrect tagged words from validation set : **13** words*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Running Algorithm On Test Dataset\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 25.2 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "test_tagged_seq_tigram = Viterbi_With_Trigram_State(test_data_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Android', 'NOUN'), ('is', 'VERB'), ('a', 'DET'), ('mobile', 'ADJ'), ('operating', 'NOUN'), ('system', 'NOUN'), ('developed', 'VERB'), ('by', 'ADP'), ('Google', 'DET'), ('.', '.'), ('Android', 'NOUN'), ('has', 'VERB'), ('been', 'VERB'), ('the', 'DET'), ('best-selling', 'ADJ'), ('OS', 'NOUN'), ('worldwide', 'NOUN'), ('on', 'ADP'), ('smartphones', 'NOUN'), ('since', 'ADP'), ('2011', 'NOUN'), ('and', 'CONJ'), ('on', 'ADP'), ('tablets', 'NOUN'), ('since', 'ADP'), ('2013', 'NOUN'), ('.', '.'), ('Google', 'NOUN'), ('and', 'CONJ'), ('Twitter', 'NOUN'), ('made', 'VERB'), ('a', 'DET'), ('deal', 'NOUN'), ('in', 'ADP'), ('2015', 'NOUN'), ('that', 'ADP'), ('gave', 'VERB'), ('Google', 'NOUN'), ('access', 'NOUN'), ('to', 'PRT'), ('Twitter', 'NOUN'), (\"'s\", 'PRT'), ('firehose', 'NOUN'), ('.', '.'), ('Twitter', 'NOUN'), ('is', 'VERB'), ('an', 'DET'), ('online', 'NOUN'), ('news', 'NOUN'), ('and', 'CONJ'), ('social', 'ADJ'), ('networking', 'NOUN'), ('service', 'NOUN'), ('on', 'ADP'), ('which', 'DET'), ('users', 'NOUN'), ('post', 'NOUN'), ('and', 'CONJ'), ('interact', 'NOUN'), ('with', 'ADP'), ('messages', 'NOUN'), ('known', 'VERB'), ('as', 'ADP'), ('tweets', 'DET'), ('.', '.'), ('Before', 'ADP'), ('entering', 'VERB'), ('politics', 'NOUN'), (',', '.'), ('Donald', 'NOUN'), ('Trump', 'NOUN'), ('was', 'VERB'), ('a', 'DET'), ('domineering', 'NOUN'), ('businessman', 'NOUN'), ('and', 'CONJ'), ('a', 'DET'), ('television', 'NOUN'), ('personality', 'ADP'), ('.', '.'), ('The', 'DET'), ('2018', 'NOUN'), ('FIFA', 'ADP'), ('World', 'NOUN'), ('Cup', 'NOUN'), ('is', 'VERB'), ('the', 'DET'), ('21st', 'NOUN'), ('FIFA', 'ADP'), ('World', 'NOUN'), ('Cup', 'NOUN'), (',', '.'), ('an', 'DET'), ('international', 'ADJ'), ('football', 'NOUN'), ('tournament', 'NOUN'), ('contested', 'NOUN'), ('once', 'ADV'), ('every', 'DET'), ('four', 'NUM'), ('years', 'NOUN'), ('.', '.'), ('This', 'DET'), ('is', 'VERB'), ('the', 'DET'), ('first', 'ADJ'), ('World', 'NOUN'), ('Cup', 'NOUN'), ('to', 'PRT'), ('be', 'VERB'), ('held', 'VERB'), ('in', 'ADP'), ('Eastern', 'NOUN'), ('Europe', 'NOUN'), ('and', 'CONJ'), ('the', 'DET'), ('11th', 'ADJ'), ('time', 'NOUN'), ('that', 'ADP'), ('it', 'PRON'), ('has', 'VERB'), ('been', 'VERB'), ('held', 'VERB'), ('in', 'ADP'), ('Europe', 'NOUN'), ('.', '.'), ('Show', 'NOUN'), ('me', 'PRON'), ('the', 'DET'), ('cheapest', 'ADJ'), ('round', 'NOUN'), ('trips', 'NOUN'), ('from', 'ADP'), ('Dallas', 'NOUN'), ('to', 'PRT'), ('Atlanta', 'NOUN'), ('I', 'PRON'), ('would', 'VERB'), ('like', 'ADP'), ('to', 'PRT'), ('see', 'VERB'), ('flights', 'NOUN'), ('from', 'ADP'), ('Denver', 'NOUN'), ('to', 'PRT'), ('Philadelphia', 'NOUN'), ('.', '.'), ('Show', 'NOUN'), ('me', 'PRON'), ('the', 'DET'), ('price', 'NOUN'), ('of', 'ADP'), ('the', 'DET'), ('flights', 'NOUN'), ('leaving', 'VERB'), ('Atlanta', 'NOUN'), ('at', 'ADP'), ('about', 'ADP'), ('3', 'NUM'), ('in', 'ADP'), ('the', 'DET'), ('afternoon', 'NOUN'), ('and', 'CONJ'), ('arriving', 'NOUN'), ('in', 'ADP'), ('San', 'NOUN'), ('Francisco', 'NOUN'), ('.', '.'), ('NASA', 'NOUN'), ('invited', 'NOUN'), ('social', 'ADJ'), ('media', 'NOUN'), ('users', 'NOUN'), ('to', 'PRT'), ('experience', 'NOUN'), ('the', 'DET'), ('launch', 'NOUN'), ('of', 'ADP'), ('ICESAT-2', 'NOUN'), ('Satellite', 'NOUN'), ('.', '.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_tagged_seq_tigram)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate Test Dataset Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total words - 181. correctly tagged words - 161. accuracy - 0.8895027624309392\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc_test_dataset_accuracy(test_tagged_seq_tigram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Android', 'NOUN'), ('Google', 'DET'), ('Android', 'NOUN'), ('OS', 'NOUN'), ('worldwide', 'NOUN'), ('smartphones', 'NOUN'), ('2011', 'NOUN'), ('2013', 'NOUN'), ('Google', 'NOUN'), ('Twitter', 'NOUN'), ('2015', 'NOUN'), ('Google', 'NOUN'), ('Twitter', 'NOUN'), ('firehose', 'NOUN'), ('Twitter', 'NOUN'), ('online', 'NOUN'), ('interact', 'NOUN'), ('messages', 'NOUN'), ('tweets', 'DET'), ('domineering', 'NOUN'), ('personality', 'ADP'), ('2018', 'NOUN'), ('FIFA', 'ADP'), ('Cup', 'NOUN'), ('21st', 'NOUN'), ('FIFA', 'ADP'), ('Cup', 'NOUN'), ('tournament', 'NOUN'), ('contested', 'NOUN'), ('Cup', 'NOUN'), ('trips', 'NOUN'), ('arriving', 'NOUN'), ('NASA', 'NOUN'), ('invited', 'NOUN'), ('ICESAT-2', 'NOUN'), ('Satellite', 'NOUN')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_unknown_tagged_words = [tup for tup in test_tagged_seq_tigram if tup[0] in test_data_unknown_words]\n",
+    "\n",
+    "print(test_unknown_tagged_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> -  *proper nouns have been tagged correctly by this tagger : <b>Android, smartphones, Twitter</b>*\n",
+    "-  *unknown words tagged <b>incorrectly</b>*\n",
+    " -  *numbers like 2011 & 2013*\n",
+    " -  *verbs like domineering & invited*\n",
+    " \n",
+    "> *overall tagging accuracy improved to <b>88.95%</b>, which includes both known and unknown words*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
